<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.dotevolve.benchmark.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="200"
        android:title="@string/performance_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_schedule"
        android:orderInCategory="300"
        android:title="@string/schedule_daily_benchmark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_dark_mode"
        android:orderInCategory="400"
        android:title="@string/toggle_dark_mode"
        app:showAsAction="never" />
</menu>